added bib + build to arxeio

--- a/vivliografiki_template2/sigproc.bib
+++ b/vivliografiki_template2/sigproc.bib
@@ -276,3 +276,152 @@
 	year={2016},
 	organization={IEEE}
 }
+
+@inproceedings{Bakliwal:2012:MST:2392963.2392970,
+ author = {Bakliwal, Akshat and Arora, Piyush and Madhappan, Senthil and Kapre, Nikhil and Singh, Mukesh and Varma, Vasudeva},
+ title = {Mining Sentiments from Tweets},
+ booktitle = {Proceedings of the 3rd Workshop in Computational Approaches to Subjectivity and Sentiment Analysis},
+ series = {WASSA '12},
+ year = {2012},
+ location = {Jeju, Republic of Korea},
+ pages = {11--18},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=2392963.2392970},
+ acmid = {2392970},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+@article{go2009twitter,
+  title={Twitter sentiment classification using distant supervision},
+  author={Go, Alec and Bhayani, Richa and Huang, Lei},
+  journal={CS224N Project Report, Stanford},
+  volume={1},
+  number={12},
+  year={2009}
+}
+
+@article{bora2012summarizing,
+  title={Summarizing public opinions in tweets},
+  author={Bora, Nibir Nayan},
+  journal={International Journal of Computational Linguistics and Applications},
+  volume={3},
+  number={1},
+  pages={41--55},
+  year={2012}
+}
+
+@inproceedings{Bueno2013SSAUOUS,
+  title={SSA-UO: Unsupervised Sentiment Analysis in Twitter},
+  author={Reynier Ortega Bueno and Adrian Fonseca Bruz{\'o}n and Yoan Guti{\'e}rrez-V{\'a}zquez and Andr{\'e}s Montoyo},
+  booktitle={SemEval@NAACL-HLT},
+  year={2013}
+}
+
+@InProceedings{nakov-EtAl:2013:SemEval-2013,
+  author    = {Nakov, Preslav  and  Rosenthal, Sara  and  Kozareva, Zornitsa  and  Stoyanov, Veselin  and  Ritter, Alan  and  Wilson, Theresa},
+  title     = {SemEval-2013 Task 2: Sentiment Analysis in Twitter},
+  booktitle = {Second Joint Conference on Lexical and Computational Semantics (*SEM), Volume 2: Proceedings of the Seventh International Workshop on Semantic Evaluation (SemEval 2013)},
+  month     = {June},
+  year      = {2013},
+  address   = {Atlanta, Georgia, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {312--320},
+  url       = {http://www.aclweb.org/anthology/S13-2052}
+}
+
+@inproceedings{Zhang2011CombiningLA,
+  title={Combining Lexicon-based and Learning-based Methods for Twitter Sentiment Analysis},
+  author={Lei Zhang and Riddhiman Ghosh and Mohamed Dekhil and Meichun Hsu and Bing Liu},
+  year={2011}
+}
+
+@article{Ghiassi:2013:TBS:2506578.2506879,
+ author = {Ghiassi, M. and Skinner, J. and Zimbra, D.},
+ title = {Twitter Brand Sentiment Analysis: A Hybrid System Using N-gram Analysis and Dynamic Artificial Neural Network},
+ journal = {Expert Syst. Appl.},
+ issue_date = {November, 2013},
+ volume = {40},
+ number = {16},
+ month = nov,
+ year = {2013},
+ issn = {0957-4174},
+ pages = {6266--6282},
+ numpages = {17},
+ url = {http://dx.doi.org/10.1016/j.eswa.2013.05.057},
+ doi = {10.1016/j.eswa.2013.05.057},
+ acmid = {2506879},
+ publisher = {Pergamon Press, Inc.},
+ address = {Tarrytown, NY, USA},
+ keywords = {DAN2, Feature engineering, Machine learning, SVM, Sentiment analysis, Twitter, Twitter-specific lexicon, n-gram analysis},
+} 
+
+@inproceedings{Khuc:2012:TBL:2245276.2245364,
+ author = {Khuc, Vinh Ngoc and Shivade, Chaitanya and Ramnath, Rajiv and Ramanathan, Jay},
+ title = {Towards Building Large-scale Distributed Systems for Twitter Sentiment Analysis},
+ booktitle = {Proceedings of the 27th Annual ACM Symposium on Applied Computing},
+ series = {SAC '12},
+ year = {2012},
+ isbn = {978-1-4503-0857-1},
+ location = {Trento, Italy},
+ pages = {459--464},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2245276.2245364},
+ doi = {10.1145/2245276.2245364},
+ acmid = {2245364},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {MapReduce, opinion mining, social networks, twitter},
+} 
+
+@inproceedings{Cui:2011:ETB:2189339.2189365,
+ author = {Cui, Anqi and Zhang, Min and Liu, Yiqun and Ma, Shaoping},
+ title = {Emotion Tokens: Bridging the Gap Among Multilingual Twitter Sentiment Analysis},
+ booktitle = {Proceedings of the 7th Asia Conference on Information Retrieval Technology},
+ series = {AIRS'11},
+ year = {2011},
+ isbn = {978-3-642-25630-1},
+ location = {Dubai, United Arab Emirates},
+ pages = {238--249},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1007/978-3-642-25631-8_22},
+ doi = {10.1007/978-3-642-25631-8_22},
+ acmid = {2189365},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {Twitter sentiment analysis, emotion token, metwork informal language, multilingual sentiment analysis, sentiment lexicon},
+} 
+
+@inproceedings{Speriosu:2011:TPC:2140458.2140465,
+ author = {Speriosu, Michael and Sudan, Nikita and Upadhyay, Sid and Baldridge, Jason},
+ title = {Twitter Polarity Classification with Label Propagation over Lexical Links and the Follower Graph},
+ booktitle = {Proceedings of the First Workshop on Unsupervised Learning in NLP},
+ series = {EMNLP '11},
+ year = {2011},
+ isbn = {978-1-937284-13-8},
+ location = {Edinburgh, Scotland},
+ pages = {53--63},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=2140458.2140465},
+ acmid = {2140465},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+@inproceedings{Wang:2011:TSA:2063576.2063726,
+ author = {Wang, Xiaolong and Wei, Furu and Liu, Xiaohua and Zhou, Ming and Zhang, Ming},
+ title = {Topic Sentiment Analysis in Twitter: A Graph-based Hashtag Sentiment Classification Approach},
+ booktitle = {Proceedings of the 20th ACM International Conference on Information and Knowledge Management},
+ series = {CIKM '11},
+ year = {2011},
+ isbn = {978-1-4503-0717-8},
+ location = {Glasgow, Scotland, UK},
+ pages = {1031--1040},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2063576.2063726},
+ doi = {10.1145/2063576.2063726},
+ acmid = {2063726},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {graph-based classification, hashtag, sentiment analysis, twitter},
+} 
